After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640420 - nautilus segfaults when I set show-desktop-icons to true
nautilus segfaults when I set show-desktop-icons to true
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.91.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-01-24 14:20 UTC by Matthias Clasen
Modified: 2011-01-25 18:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
stack trace (2.46 KB, text/plain)
2011-01-24 14:22 UTC, Matthias Clasen
Details

Description Matthias Clasen 2011-01-24 14:20:47 UTC
To reproduce:

1. gsettings set org.gnome.desktop.background show-desktop-icons false
2. start nautilus
3. gsettings set org.gnome.desktop.background show-desktop-icons true
Comment 1 Matthias Clasen 2011-01-24 14:22:25 UTC
Created attachment 179172 [details]
stack trace
Comment 2 Fabio Durán Verdugo 2011-01-24 15:12:42 UTC
paste here the bt


Thread 1 (Thread 0x7ffff7fbc9c0 (LWP 13771))

  • #0 background_change_event_idle_cb
    at nautilus-desktop-background.c line 431
  • #1 g_main_dispatch
    at gmain.c line 2440
  • #2 g_main_context_dispatch
    at gmain.c line 3013
  • #3 g_main_context_iterate
    at gmain.c line 3091
  • #4 g_main_loop_run
    at gmain.c line 3299
  • #5 gtk_main
    at gtkmain.c line 1336
  • #6 g_application_run
    at gapplication.c line 1219
  • #7 main
    at nautilus-main.c line 105

	Inferior 1 [process 13771] will be killed.

Quit anyway? (y or n)
Comment 3 Fabio Durán Verdugo 2011-01-24 15:21:56 UTC
yes I can confirm this change the status to NEW
Comment 4 Cosimo Cecchi 2011-01-25 18:30:20 UTC
Thanks for the report, I fixed this in master.