desktop-background: make sure to hold a ref in the 'changed' idle

Otherwise we might end up accessing object fields after it was
destroyed.

https://bugzilla.gnome.org/show_bug.cgi?id=640420